--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,15 +17,16 @@ repos:
         pass_filenames: false
         message: "Error: Do not use 'apt' in the main Dockerfile. Please update Dockerfile.base instead to include new system dependencies."
 
+      - id: custom-bandit
+        name: Security check (Bandit)
+        entry: python3 scripts/security_check.py
+        language: system
+        pass_filenames: false
+        always_run: true
+
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.9.6
     hooks:
       - id: ruff
         args: [--fix]
       - id: ruff-format
-
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.6
-    hooks:
-      - id: bandit
-        args: ["-r", "--ignore-nosec", "-ll", "app"]
