--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pydantic==2.12.5
 pydantic-settings==2.12.0
 psutil==7.2.2
 httpx==0.28.1
-PyPDF2==3.0.1
+pypdf==5.3.1
 reportlab==4.4.10
 ruff==0.15.1
 bandit==1.9.3
