--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
-nicegui
-sqlalchemy
-asyncmy
-cryptography # asyncmy 可能会用到
-python-dotenv
-bcrypt==4.0.1
-passlib
-python-jose[cryptography]
-pydantic
-pydantic-settings
-ruff
-bandit
-pre-commit
+nicegui==3.7.1
+sqlalchemy==2.0.46
+aiomysql==0.3.2
+cryptography==46.0.5
+python-dotenv==1.2.1
+bcrypt==5.0.0
+passlib==1.7.4
+python-jose[cryptography]==3.5.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
+psutil==7.2.2
+httpx==0.28.1
+pypdf==6.6.2
+reportlab==4.4.10
+markdown==3.7
+ruff==0.15.1
+bandit==1.9.3
+pre-commit==4.5.1
